--- a/.env
+++ b/.env
@@ -23,8 +23,13 @@ REDIS_HOST=redis-queue
 REDIS_PORT=6379
 REDIS_CHANNEL=log_channel
 
-#login details
-# USERNAME    PASSWORD
-admin Admin123
-hng HngTech
-user Password
+# Login details
+USERNAME_ADMIN=admin
+PASSWORD_ADMIN=Admin123
+
+USERNAME_HNG=hng
+PASSWORD_HNG=HngTech
+
+USERNAME_USER=user
+PASSWORD_USER=Password
+
